# django-template

./: .environ  .gitignore  Makefile  README.md  cookiecutter.json  makefile  package.json  pyproject.toml  readme.md
settings/: django.py
src/settings/: common.py  django.py  local.py.template
{{cookiecutter.project_name}}/: .editorconfig  .environ  .flake8  .gitignore  .prettierignore  Dockerfile  Makefile  README.md  README.rst  cookbook.toml  cookbook.yaml  cookbook.yml  docker-compose.yml  enforce_eol.py  example.env.toml  make.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json
{{cookiecutter.project_name}}/etc/nginx/servers/: template.nginx  template.{{cookiecutter.project_name}}.nginx
{{cookiecutter.project_name}}/etc/systemd/system/: template.service  template.socket  template.{{cookiecutter.project_name}}.service  template.{{cookiecutter.project_name}}.socket
{{cookiecutter.project_name}}/etc/tmpfiles.d/: template.{{cookiecutter.project_name}}.conf
{{cookiecutter.project_name}}/src/: settings.py  urls.py  urls_dev.py
{{cookiecutter.project_name}}/src/home/: dashboard.py
{{cookiecutter.project_name}}/src/home/management/commands/: makemigrations.py
{{cookiecutter.project_name}}/src/home/templates/home/: home.html
{{cookiecutter.project_name}}/src/lib/: admin.py  apps.py  datetime.py  utils.py
{{cookiecutter.project_name}}/src/lib/data/: timezones.py
{{cookiecutter.project_name}}/src/lib/templates/lib/: base.html  base_header.html
{{cookiecutter.project_name}}/src/registration/: admin.py  apps.py  models.py
{{cookiecutter.project_name}}/src/registration/templates/registration/: login.html
{{cookiecutter.project_name}}/src/settings/: common.py  dev.py  django.py  production.py  template.py
{{cookiecutter.project_name}}/src/sigil/: apps.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: apps.py  settings.py  urls.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/accounts/: admin.py  apps.py  models.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/accounts/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/authentication/: admin.py  apps.py  models.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/branding/: apps.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/branding/static/branding/img/: DELETE_ME
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/branding/templates/admin/: base_site.html
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/branding/templates/branding/: favicons.html
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/home/: apps.py  dashboard.py  urls.py  views.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/home/management/commands/: checkmigrations.py  makemigrations.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/home/templates/home/: home.html
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/home/templates/registration/: login.html
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/lib/: apps.py  choices.py  date_utils.py  datetime.py  emails.py  exceptions.py  http.py  models.py  types.py  utils.py  views.py  workers.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/lib/data/: timezones.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/lib/static/lib/css/: base.scss
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/lib/templates/lib/: base.html  base_footer.html  base_header.html  base_meta.html
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/registration/: admin.py  apps.py  models.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/registration/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/users/: apps.py  models.py  urls.py  views.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/users/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/tests/: conftest.py  test_urls.py
{{cookiecutter.project_name}}/tests/{{cookiecutter.project_name}}/: test_urls.py
{{cookiecutter.project_name}}/tests/{{cookiecutter.project_name}}/accounts/: test_models.py
{{cookiecutter.project_name}}/tests/{{cookiecutter.project_name}}/factories/: users.py
{{cookiecutter.project_name}}/tests/{{cookiecutter.project_name}}/home/: test_views.py
{{cookiecutter.project_name}}/tests/{{cookiecutter.project_name}}/lib/: test_choices.py  test_date_utils.py  test_datetime.py  test_models.py  test_utils.py
{{cookiecutter.project_name}}/tests/{{cookiecutter.project_name}}/registration/: test_models.py
{{cookiecutter.project_name}}/tests/{{cookiecutter.project_name}}/users/: test_models.py  test_views.py
