[tool.black]
target-version = ["py36", "py37", "py38"]

[tool.poetry]
name = "{{project_name}}"
version = "0.1.0"
license = "MIT"
authors = []

[tool.poetry.dependencies]
python = "^3.6"

django = "~2.2"
psycopg2 = "~2.8"


[tool.poetry.dev-dependencies]
black = {version = "*", allows-prereleases = true}
