[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.isort]
line_length = 88
multi_line_output = 3
py_version = 310
combine_as_imports = true
include_trailing_comma = true
known_tests = "tests"
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "TESTS"]

[tool.mypy]
exclude = "/migrations/"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".cache",
]
max-line-length = 88
ignore = [
    "E203",
    "E501",
    "W503",
]
banned-modules = """
    mock = use unittest.mock
    pytz = use zoneinfo
"""
ban-relative-imports = true

[tool.pytest.ini_options]
addopts = "-vv --cov --cov-report=term-missing:skip-covered --reuse-db"
testpaths = "tests"

[tool.coverage.run]
source = ["src/"]
omit = [
    "src/{{cookiecutter.project_name}}/asgi.py",
    "src/{{cookiecutter.project_name}}/wsgi.py",
    "src/{{cookiecutter.project_name}}/authentication/migrations/*",
]

[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
license = "Proprietary"
authors = [
    "{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>",
]

[tool.poetry.dependencies]
# python version
python = "^3.11.0"

# dependencies
dj-settings = "~4.1.0"
Django = "~4.1.0"
django-grappelli = "~3.0.0"
gunicorn = "~20.1.0"
pathurl = "~0.5.0"
psycopg2 = "~2.9.0"
uvicorn = "~0.19.0"

[tool.poetry.group.dev.dependencies]
django-extensions = "~3.2.0"
pdbpp = "~0.10.0"
pipdeptree = "~2.3.0"
ptpython = "~3.0.0"
Werkzeug = "~2.2.0"

[tool.poetry.group.lint.dependencies]
black = "~22.10.0"
flake8 = "~5.0.0"
flake8-bugbear = "~22.10.0"
flake8-builtins = "~2.0.0"
flake8-comprehensions = "~3.10.0"
flake8-eradicate = "~1.4.0"
flake8-executable = "~2.1.0"
flake8-mutable = "~1.2.0"
Flake8-pyproject = "~1.1.0"
flake8-tidy-imports = "~4.8.0"
isort = "~5.10.0"
mypy = "~0.990"

[tool.poetry.group.test.dependencies]
factory-boy = "~3.2.0"
freezegun = "~1.2.0"
pytest = "~7.2.0"
pytest-cov = "~4.0.0"
pytest-django = "~4.5.0"
