[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"
py_version = 311
known_tests = "tests"
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "TESTS"]

[tool.mypy]
exclude = "/migrations/"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    ".cache",
]
max-line-length = 88
ignore = [
    "E203",
    "E501",
    "W503",
]
banned-modules = """
    mock = use unittest.mock
    pytz = use zoneinfo
"""
ban-relative-imports = true

[tool.pytest.ini_options]
addopts = "-vv --cov --cov-report=term-missing:skip-covered --reuse-db"
testpaths = "tests"

[tool.coverage.run]
source = ["src/"]
omit = [
    "src/{{cookiecutter.project_name}}/asgi.py",
    "src/{{cookiecutter.project_name}}/wsgi.py",
    "src/{{cookiecutter.project_name}}/authentication/migrations/*",
]

[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
license = "Proprietary"
authors = [
    "{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>",
]

[tool.poetry.dependencies]
# python version
python = "^3.11"

# dependencies
dj-settings = "~4.2"
Django = "~4.1"
django-grappelli = "~3.0"
gunicorn = "~20.1"
pathurl = "~0.5"
psycopg2 = "~2.9"
uvicorn = "~0.20"

[tool.poetry.group.dev.dependencies]
django-extensions = "~3.2"
ipdb = "~0.13"
ipython = "~8.9"
pipdeptree = "~2.3"
Werkzeug = "~2.2"

[tool.poetry.group.lint.dependencies]
black = "~23.1"
flake8 = "~5.0"
flake8-bugbear = "~23.1"
flake8-builtins = "~2.1"
flake8-comprehensions = "~3.10"
flake8-eradicate = "~1.4"
flake8-executable = "~2.1"
flake8-mutable = "~1.2"
Flake8-pyproject = "~1.2"
flake8-tidy-imports = "~4.8"
isort = "~5.12"
mypy = "~0.991"

[tool.poetry.group.test.dependencies]
factory-boy = "~3.2"
freezegun = "~1.2"
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-django = "~4.5"
