[build-system]
requires = [
    "poetry_core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = ".*\\.ipynb"
target-version = [
    "py312",
]

[tool.mypy]
exclude = "/migrations/"

check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

plugins = [
    "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "cc_bz_project_name.settings"

[tool.ruff]
src = [
    "src",
]
target-version = "py312"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FA",
    "FBT",
    "FLY",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PGH",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T10",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "COM812",
    "E501",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "FBT001",
    "PT011",
    "S101",
    "S105",
    "S106",
]
"**/migrations/**" = [
    "RUF001",
    "RUF012",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.ruff.lint.isort]
combine-as-imports = true
forced-separate = [
    "tests",
]
split-on-trailing-comma = false

[tool.pytest.ini_options]
addopts = "-vv --reuse-db"
testpaths = "tests"

[tool.coverage.run]
source = [
    "src/",
]
data_file = ".cov_cache/coverage.dat"
omit = [
    "src/cc_bz_project_name/asgi.py",
    "src/cc_bz_project_name/wsgi.py",
    "src/cc_bz_project_name/settings.py",
    "src/cc_bz_project_name/*/migrations/*",
    "src/cc_bz_project_name/lib/workers.py",
    "src/cc_bz_project_name/home/dashboard.py",
    "src/cc_bz_project_name/home/management/commands/makemigrations.py",
    "src/cc_bz_project_name/home/management/commands/checkmigrations.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.poetry]
name = "cc_bz_project_name"
version = "0.1.0"
description = "cc_bz_description"
license = "Proprietary"
authors = [
    "cc_bz_author_name <cc_bz_author_email>",
]

[tool.poetry.dependencies]
# python version
python = "^3.12"

# dependencies
dj-settings = "~4.2"
Django = "~5.0"
django-stubs-ext = "~4.2"
django-grappelli = "~3.0"
gunicorn = "~21.2"
pathurl = "~0.6"
psycopg = "~3.1"
pyOpenSSL = "~24.0"
uvicorn = "~0.27"

[tool.poetry.group.dev.dependencies]
django-extensions = "~3.2"
ipdb = "~0.13"
ipython = "~8.21"
jupyterlab = "~4.1"
pipdeptree = "~2.14"
Pygments = "~2.17"
Werkzeug = "~3.0"

[tool.poetry.group.lint.dependencies]
black = "~24.3"
django-stubs = "~4.2"
mypy = "~1.8"
ruff = "~0.2"

[tool.poetry.group.test.dependencies]
factorio = "~0.4"
freezegun = "~1.4"
pytest = "~8.0"
pytest-asyncio = "~0.23"
pytest-cov = "~4.1"
pytest-django = "~4.8"
